    numpy by default unless any of the following conditions is met: 
      a. Working version of NumPy dectected by autoconf.
      b. User requests no installation with --disable-pdb2pka option.
      c. User specifies external NumPy installation.  
  * Merged Samir's branch. Now PDB2PQR Opal and APBS Opal services are 
    available.
	
 -BUG FIXES
  * Fixed a legacy bug with the web server (web server doesn't like ligand 
    files generated on Windows or old Mac OS platforms).
  * Fixed a bug in configure.ac, so that PDB2PQR no longer checks for 
	Numpy.pth at configure stage.
  * Updated pdb2pka/substruct/Makefile.am. 
  * Fixed isBackbone bug in definitions.py.
  * Fixed a bug for Carboxylic residues in hydrogens.py.
  * Fixed a bug in routines.py, which caused hydrogens added in LEU and ILE
    in eclipsed conformation rather than staggered. 
  * Fixed a bug in configure.ac, now it is OK to configure with double slashes
    in the prefix path, e.g.,  --prefix=/foo/bar//another/path .
  * Fixed a bug in nucleic acid naming scheme. 
  * Fixed a bug involving MET, GLY as NTERM, CTERM with --ffout option.
  * Fixed a bug for PRO as C-terminus with PARSE forcefield. 

#############################################################################
BETA PUBLIC RELEASE VERSION 1.3.0       1-8-08
#############################################################################
 - NEW FEATURES / CHANGES
  * Added "make test" and "make adv-test"
  * Fixed problems with "make dist"
  * Added integration with Opal for launching jobs as well as querying status
  * The user may use NUMPY to specify the location of NUMPY.
  * Both PDB2PKA and PROPKA are enabled by default.  PDB2PKA is enabled by
    default since ligand parameterization would fail without this option.
  * For a regular user, "make install" tells the user the exact command the
    system administrator will use to make the URL viewable.
  * The default value of 7.00 for the pH on the server form is removed due